<?xml version="1.0" encoding="utf-8"?>
<!--
Layout for individual Note item
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/prime2"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/padGen"
    android:layout_marginRight="@dimen/padGen"
    >


    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/noteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padGen"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/noteDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/itemDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/positive"
            android:text="@string/btndone"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/itemBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/neutral"
            android:text="@string/btnEdit"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/itemRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/negative"
            android:text="@string/btnRemove"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>